--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.38.4",
     "@tanstack/react-query": "^5.17.10",
+    "@tanstack/react-query-devtools": "^5.17.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@tanstack/eslint-plugin-query": "^5.17.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
