--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.17.0",
+    "recharts": "^2.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
