--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.6",
+    "@mui/x-charts": "^6.19.4",
     "@mui/x-date-pickers": "^6.19.3",
     "@supabase/auth-ui-react": "^0.4.6",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -28,7 +29,6 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.17.0",
-    "recharts": "^2.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
